--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.10.4",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
