--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.4",
     "chart.js": "^4.2.1",
     "vue": "^3.2.47",
