--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.4",
     "chart.js": "^4.2.1",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.6"
