--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
+    "vue-flash-message": "^0.7.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
