--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bootstrap-icons": "^1.10.4",
+    "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "sweetalert2": "^11.7.3",
     "vue": "^3.2.47",
