--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.10.4",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "sweetalert2": "^11.7.5",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
