--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "moment": "^2.29.4",
     "sweetalert2": "^11.7.5",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
