--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
-    "sweetalert2": "^11.7.5",
+    "sweetalert2": "^11.4.8",
     "vue": "^3.2.47",
     "vue-chartjs": "^5.2.0",
     "vue-flash-message": "^0.7.2",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "xlsx": "^0.18.5",
+    "xlsx-populate": "^1.21.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
