--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
     "html2pdf.js": "^0.10.1",
+    "http-proxy-middleware": "^2.0.6",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.28",
     "moment": "^2.29.4",
