--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.10.4",
     "bootstrap-vue": "^2.23.1",
     "chart.js": "^4.2.1",
+    "datatables.net-vue3": "^2.1.0",
     "dayjs": "^1.11.7",
     "html2pdf.js": "^0.10.1",
     "http-proxy-middleware": "^2.0.6",
@@ -23,6 +24,7 @@
     "vue-chartjs": "^5.2.0",
     "vue-flash-message": "^0.7.2",
     "vue-router": "^4.1.6",
+    "vue3-easy-data-table": "^1.5.42",
     "xlsx": "^0.18.5",
     "xlsx-populate": "^1.21.0"
   },
